Fix faudroids text alignment on Safari

--- a/open-source/css/open-source.css
+++ b/open-source/css/open-source.css
@@ -46,19 +46,24 @@ body {
 }
 .banner-title > span {
     position: relative;
-    top: 48%;
-    transform: translateY(-48%);
+    top: 40%;
+    transform: translateY(-40%);
     font-size: x-large;
 }
 .banner-faudroids {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    font-size: x-large;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
     display: none;
 }
-.banner-faudroids a {
+.banner-faudroids > a {
+    position: relative;
+    top: 40%;
+    transform: translateY(-40%);
+    font-size: x-large;
     text-decoration: none;
     color: white;
 }
